src/TedToolkit.Step21/Generated/STEP/STEPParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from STEPParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TedToolkit.Step21.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
internal partial class STEPParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		ISO_START=1, ISO_END=2, HEADER=3, ANCHOR=4, REFERENCE=5, DATA=6, SIGNATURE=7,
		ENDSEC=8, FILE_DESCRIPTION=9, FILE_NAME=10, FILE_SCHEMA=11, LPAREN=12,
		RPAREN=13, SEMICOLON=14, COMMA=15, ASTERISK=16, DOLLAR=17, EQUALS=18,
		LBRACE=19, RBRACE=20, COLON=21, Real=22, Integer=23, String=24, EntityInstanceName=25,
		ValueInstanceName=26, ConstantEntityName=27, ConstantValueName=28, UriLt=29,
		Enumeration=30, Binary=31, UserDefinedKeyword=32, StandardKeyword=33,
		UpperKeyword=34, TagName=35, PrintControl=36, Comment=37, IgnoredControl=38,
		Space=39, UriGt=40, UriEscaped=41, UriAlpha=42, UriDigit=43, UriMinus=44,
		UriLowLine=45, UriDot=46, UriExclamation=47, UriTilde=48, UriAsterisk=49,
		UriApostrophe=50, UriLeftParen=51, UriRightParen=52, UriSemicolon=53,
		UriSlash=54, UriQuestion=55, UriColon=56, UriAt=57, UriAmpersand=58, UriEquals=59,
		UriPlus=60, UriDollar=61, UriComma=62, UriHash=63, UriIgnoredControl=64,
		SignatureContent=65, SignaturePrintControl=66, SignatureComment=67, SignatureIgnoredControl=68,
		SignatureSpace=69;
	public const int
		RULE_exchangeFile = 0, RULE_headerSection = 1, RULE_fileDescription = 2,
		RULE_fileName = 3, RULE_fileSchema = 4, RULE_headerEntity = 5, RULE_parameterList = 6,
		RULE_parameter = 7, RULE_typedParameter = 8, RULE_untypedParameter = 9,
		RULE_list = 10, RULE_anchorSection = 11, RULE_anchor = 12, RULE_anchorItem = 13,
		RULE_anchorItemList = 14, RULE_anchorTag = 15, RULE_tagName = 16, RULE_referenceSection = 17,
		RULE_reference = 18, RULE_resource = 19, RULE_anchorName = 20, RULE_uriReference = 21,
		RULE_absoluteUri = 22, RULE_hierPart = 23, RULE_opaquePart = 24, RULE_relativeUri = 25,
		RULE_netPath = 26, RULE_absPath = 27, RULE_relPath = 28, RULE_pathSegments = 29,
		RULE_segment = 30, RULE_param = 31, RULE_relSegment = 32, RULE_scheme = 33,
		RULE_authority = 34, RULE_query = 35, RULE_uriFragment = 36, RULE_pchar = 37,
		RULE_relCharacter = 38, RULE_authorityCharacter = 39, RULE_uriNoSlash = 40,
		RULE_uriCharacter = 41, RULE_uriNonDigit = 42, RULE_uriReserved = 43,
		RULE_uriUnreserved = 44, RULE_dataSection = 45, RULE_entityInstance = 46,
		RULE_simpleEntityInstance = 47, RULE_complexEntityInstance = 48, RULE_simpleRecord = 49,
		RULE_subSuperRecord = 50, RULE_signatureSection = 51, RULE_keyword = 52,
		RULE_lhsOccurrenceName = 53, RULE_rhsOccurrenceName = 54;
	public static readonly string[] ruleNames = {
		"exchangeFile", "headerSection", "fileDescription", "fileName", "fileSchema",
		"headerEntity", "parameterList", "parameter", "typedParameter", "untypedParameter",
		"list", "anchorSection", "anchor", "anchorItem", "anchorItemList", "anchorTag",
		"tagName", "referenceSection", "reference", "resource", "anchorName",
		"uriReference", "absoluteUri", "hierPart", "opaquePart", "relativeUri",
		"netPath", "absPath", "relPath", "pathSegments", "segment", "param", "relSegment",
		"scheme", "authority", "query", "uriFragment", "pchar", "relCharacter",
		"authorityCharacter", "uriNoSlash", "uriCharacter", "uriNonDigit", "uriReserved",
		"uriUnreserved", "dataSection", "entityInstance", "simpleEntityInstance",
		"complexEntityInstance", "simpleRecord", "subSuperRecord", "signatureSection",
		"keyword", "lhsOccurrenceName", "rhsOccurrenceName"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null,
		null, null, null, null, null, null, null, "'{'", "'}'", null, null, null,
		null, null, null, null, null, "'<'", null, null, null, null, null, null,
		null, null, null, null, "'>'", null, null, null, "'-'", "'_'", "'.'",
		"'!'", "'~'", null, "'''", null, null, null, "'/'", "'?'", null, "'@'",
		"'&'", null, "'+'", null, null, "'#'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "ISO_START", "ISO_END", "HEADER", "ANCHOR", "REFERENCE", "DATA",
		"SIGNATURE", "ENDSEC", "FILE_DESCRIPTION", "FILE_NAME", "FILE_SCHEMA",
		"LPAREN", "RPAREN", "SEMICOLON", "COMMA", "ASTERISK", "DOLLAR", "EQUALS",
		"LBRACE", "RBRACE", "COLON", "Real", "Integer", "String", "EntityInstanceName",
		"ValueInstanceName", "ConstantEntityName", "ConstantValueName", "UriLt",
		"Enumeration", "Binary", "UserDefinedKeyword", "StandardKeyword", "UpperKeyword",
		"TagName", "PrintControl", "Comment", "IgnoredControl", "Space", "UriGt",
		"UriEscaped", "UriAlpha", "UriDigit", "UriMinus", "UriLowLine", "UriDot",
		"UriExclamation", "UriTilde", "UriAsterisk", "UriApostrophe", "UriLeftParen",
		"UriRightParen", "UriSemicolon", "UriSlash", "UriQuestion", "UriColon",
		"UriAt", "UriAmpersand", "UriEquals", "UriPlus", "UriDollar", "UriComma",
		"UriHash", "UriIgnoredControl", "SignatureContent", "SignaturePrintControl",
		"SignatureComment", "SignatureIgnoredControl", "SignatureSpace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "STEPParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static STEPParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public STEPParser(ITokenStream input) : this(input, TextWriter.Null, TextWriter.Null) { }

		public STEPParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ExchangeFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ISO_START() { return GetToken(STEPParser.ISO_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HeaderSectionContext headerSection() {
			return GetRuleContext<HeaderSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ISO_END() { return GetToken(STEPParser.ISO_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(STEPParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AnchorSectionContext anchorSection() {
			return GetRuleContext<AnchorSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReferenceSectionContext referenceSection() {
			return GetRuleContext<ReferenceSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DataSectionContext[] dataSection() {
			return GetRuleContexts<DataSectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DataSectionContext dataSection(int i) {
			return GetRuleContext<DataSectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SignatureSectionContext[] signatureSection() {
			return GetRuleContexts<SignatureSectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SignatureSectionContext signatureSection(int i) {
			return GetRuleContext<SignatureSectionContext>(i);
		}
		public ExchangeFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exchangeFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExchangeFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExchangeFileContext exchangeFile() {
		ExchangeFileContext _localctx = new ExchangeFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_exchangeFile);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(ISO_START);
			State = 111;
			headerSection();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ANCHOR) {
				{
				State = 112;
				anchorSection();
				}
			}

			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==REFERENCE) {
				{
				State = 115;
				referenceSection();
				}
			}

			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DATA) {
				{
				{
				State = 118;
				dataSection();
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 124;
			Match(ISO_END);
			State = 128;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SIGNATURE) {
				{
				{
				State = 125;
				signatureSection();
				}
				}
				State = 130;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 131;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER() { return GetToken(STEPParser.HEADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FileDescriptionContext fileDescription() {
			return GetRuleContext<FileDescriptionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileNameContext fileName() {
			return GetRuleContext<FileNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileSchemaContext fileSchema() {
			return GetRuleContext<FileSchemaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDSEC() { return GetToken(STEPParser.ENDSEC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HeaderEntityContext[] headerEntity() {
			return GetRuleContexts<HeaderEntityContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeaderEntityContext headerEntity(int i) {
			return GetRuleContext<HeaderEntityContext>(i);
		}
		public HeaderSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_headerSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeaderSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeaderSectionContext headerSection() {
		HeaderSectionContext _localctx = new HeaderSectionContext(Context, State);
		EnterRule(_localctx, 2, RULE_headerSection);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			Match(HEADER);
			State = 134;
			fileDescription();
			State = 135;
			fileName();
			State = 136;
			fileSchema();
			State = 140;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30064771072L) != 0)) {
				{
				{
				State = 137;
				headerEntity();
				}
				}
				State = 142;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 143;
			Match(ENDSEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileDescriptionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILE_DESCRIPTION() { return GetToken(STEPParser.FILE_DESCRIPTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(STEPParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(STEPParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(STEPParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public FileDescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileDescription; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileDescription(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileDescriptionContext fileDescription() {
		FileDescriptionContext _localctx = new FileDescriptionContext(Context, State);
		EnterRule(_localctx, 4, RULE_fileDescription);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(FILE_DESCRIPTION);
			State = 146;
			Match(LPAREN);
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33818873856L) != 0)) {
				{
				State = 147;
				parameterList();
				}
			}

			State = 150;
			Match(RPAREN);
			State = 151;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILE_NAME() { return GetToken(STEPParser.FILE_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(STEPParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(STEPParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(STEPParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public FileNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileNameContext fileName() {
		FileNameContext _localctx = new FileNameContext(Context, State);
		EnterRule(_localctx, 6, RULE_fileName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			Match(FILE_NAME);
			State = 154;
			Match(LPAREN);
			State = 156;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33818873856L) != 0)) {
				{
				State = 155;
				parameterList();
				}
			}

			State = 158;
			Match(RPAREN);
			State = 159;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileSchemaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FILE_SCHEMA() { return GetToken(STEPParser.FILE_SCHEMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(STEPParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(STEPParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(STEPParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public FileSchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileSchema; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFileSchema(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileSchemaContext fileSchema() {
		FileSchemaContext _localctx = new FileSchemaContext(Context, State);
		EnterRule(_localctx, 8, RULE_fileSchema);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161;
			Match(FILE_SCHEMA);
			State = 162;
			Match(LPAREN);
			State = 164;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33818873856L) != 0)) {
				{
				State = 163;
				parameterList();
				}
			}

			State = 166;
			Match(RPAREN);
			State = 167;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderEntityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public KeywordContext keyword() {
			return GetRuleContext<KeywordContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(STEPParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(STEPParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(STEPParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public HeaderEntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_headerEntity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHeaderEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HeaderEntityContext headerEntity() {
		HeaderEntityContext _localctx = new HeaderEntityContext(Context, State);
		EnterRule(_localctx, 10, RULE_headerEntity);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 169;
			keyword();
			State = 170;
			Match(LPAREN);
			State = 172;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33818873856L) != 0)) {
				{
				State = 171;
				parameterList();
				}
			}

			State = 174;
			Match(RPAREN);
			State = 175;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(STEPParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(STEPParser.COMMA, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameterList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameterList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterListContext parameterList() {
		ParameterListContext _localctx = new ParameterListContext(Context, State);
		EnterRule(_localctx, 12, RULE_parameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			parameter();
			State = 182;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 178;
				Match(COMMA);
				State = 179;
				parameter();
				}
				}
				State = 184;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypedParameterContext typedParameter() {
			return GetRuleContext<TypedParameterContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UntypedParameterContext untypedParameter() {
			return GetRuleContext<UntypedParameterContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASTERISK() { return GetToken(STEPParser.ASTERISK, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISTEPParserVisitor<TResult> typedVisitor = visitor as ISTEPParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(Context, State);
		EnterRule(_localctx, 14, RULE_parameter);
		try {
			State = 188;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case UserDefinedKeyword:
			case StandardKeyword:
			case UpperKeyword:
				EnterOuterAlt(_localctx, 1);
				{
				State = 185;
				typedParameter();
				}
				break;
			case LPAREN:
			case DOLLAR:
			case Real:
			case Integer:
			case String:
			case EntityInstanceName:
			case ValueInstanceName:
			case ConstantEntityName:
			case ConstantValueName:
			case Enumeration:
			case Binary:
				EnterOuterAlt(_localctx, 2);
				{
				State = 186;
				untypedParameter();
				}
				break;
			case ASTERISK:
				EnterOuterAlt(_localctx, 3);
				{
				State = 187;
				Match(ASTERISK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
